--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   <ul>
                         <li><img src="./images/img-1.jpg" alt="typing on keyboard" width="150"></li>
                         <li><img src="./images/img-2.jpg" alt="planning phone layout" width="150"></li>
-                        <li><img src="./images/img-3.jpg" alt="colour planning" width="150"></li>
+                        <li><img src="./images/img-3.jpg" alt="colour plalette" width="150"></li>
                   </ul>
             </section>
 
