--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
       <!--Header section-->
       <header>
-            <p><a href="#"><b>Web</b></a><b>Studio</b>
+            <p><a href="#"><b>WebStudio</b></a>
             </p>
             <nav>
                   <a href="#">Studio</a>
@@ -88,7 +88,7 @@
 
       <!--Footer section-->
       <footer>
-            <p><a href="#"><b>Web</b></a><b>Studio</b>
+            <p><a href="#"><b>WebStudio</b></a>
             </p>
             <address>
                   <p>695 Park Ave, NY 10065, USA</p>
